[tool.poetry]
name = "tempfolder"
version = "0.3.0"
description = "🗂 Easily create temporary folders, add files into them and don't worry about deleting them, tempfolder will take care"
authors = ["Jorge Alvarado <alvaradosegurajorge@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.9.3"
black = "^21.7b0"
flake8 = "^3.9.2"
coveralls = "^3.2.0"
PyYAML = "^5.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
