[tool.poetry]
name = "tempfolder"
version = "0.3.1"
description = "🗂 Easily create temporary folders, add files into them and don't worry about deleting them, tempfolder will take care"
authors = ["Jorge Alvarado <alvaradosegurajorge@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/jalvaradosegura/tempfolder"
repository = "https://github.com/jalvaradosegura/tempfolder"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.9.3"
black = "^21.7b0"
flake8 = "^3.9.2"
coveralls = "^3.2.0"
PyYAML = "^5.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
